[tool.poetry]
name = "lyra-orm"
version = "0.2.5"
description = "A ORM for lyra database, with models, schema and more."
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
SQLAlchemy = "1.3.16"
mysqlclient = "1.4.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
